RESOLVED FIXED274126
[Site Isolation] Fix TestWebKitAPI.ProcessSwap.DoSameSiteNavigationAfterCrossSiteProvisionalLoadStarted after 278624@main
https://bugs.webkit.org/show_bug.cgi?id=274126
Summary [Site Isolation] Fix TestWebKitAPI.ProcessSwap.DoSameSiteNavigationAfterCross...
Alex Christensen
Reported 2024-05-13 15:21:26 PDT
Attachments
Alex Christensen
Comment 1 2024-05-13 15:23:53 PDT
EWS
Comment 2 2024-05-13 15:39:10 PDT
Committed 278716@main (19ba6b94a4cb): <https://commits.webkit.org/278716@main> Reviewed commits have been landed. Closing PR #28506 and removing active labels.
Alexey Proskuryakov
Comment 3 2024-05-14 09:33:26 PDT
We already had a bug for this, associated with the same radar. Was it a tooling shortcoming that a new bug got filed?
Alexey Proskuryakov
Comment 4 2024-05-14 09:33:29 PDT
*** Bug 274118 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.