[Site Isolation] Fix TestWebKitAPI.ProcessSwap.DoSameSiteNavigationAfterCrossSiteProvisionalLoadStarted after 278624@main https://bugs.webkit.org/show_bug.cgi?id=274126 rdar://128023861

Reviewed by Charlie Wolfe.

I added an early return in WebPageProxy::didStartProvisionalLoadForFrameShared that I thought would only affect
behavior with site isolation on.  The assertion is hit with site isolation off, so for now just guard the behavior
change with a check to whether site isolation is on.  That fixes the regression.  When I get time to investigate
I'll see what the correct thing to do in this case with site isolation on is.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didStartProvisionalLoadForFrameShared):

Canonical link: https://commits.webkit.org/278716@main